1997-06-30  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Arg parsing added.  HOLD variable removed.
	(argp_program_version): New variable.
	Include <argp.h> and <version.h>.

Mon Feb  3 16:52:14 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* hash.c (pid_find, task_find, task_find_nocreate, reqport_find):
	Don't dereference P if it's 0.

Fri Oct 25 20:30:22 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* host.c: Include <version.h>.

Thu Oct 24 16:13:40 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* host.c (initialize_version_info): Construct UNAME_INFO.machine
	with a dash instead of a slash so that it can be used as a file
	name component.

	* host.c (initialize_version_info): Copy our version into element
	0 of server_versions, not element 1.  Use HURD_VERSION instead of
	OUR_VERSION.  Use literal "proc" instead of OUR_SERVER_NAME.
	* proc.h (OUR_SERVER_NAME, OUR_VERSION): Delete macro.

Thu Sep 12 16:33:49 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(proc): Delete special dependency.

Thu Sep  5 10:43:39 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* host.c (struct server_version): Delete member `release'.
	(kernel_name, kernel_version): New variables.
	(rebuild_uname): Do the voting on versions, not releases.
	(initialize_version_info): Store kernel information in kernel_name
	and kernel_version, not as an entry in the server_versions array. 
	Don't fill in a release for ourselves.
	(S_proc_register_version): Ignore RELEASE arg.

Sun Jul 28 22:57:03 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* info.c (get_string_array): Correctly adjust NEWSIZE when
	reallocating to add very long strings.

Sat Jul 20 10:08:05 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* msg.c (S_proc_getmsgport): Deal with PID dying while we're waiting.

Fri Jul 19 18:22:46 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* msg.c (S_proc_setmsgport): Bother to request DEAD_NAME